# paper

./: README.md  metadata.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.ts  tsconfig-1.json  tsconfig.base.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: ai_service.py  auth.py  config.py  database.py  generator.py  main.py  models.py  schemas.py  services.py
backend/qpgen_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/test-storage/papers/: paper_1.docx
backend/tests/: test_app.py
docs/: AI-FIRST-ARCHITECTURE.md  PRODUCTION-FRAMEWORK.md  project-context.md
docs/references/: Pasted-So-now-i-m-working-on-a-new-project-All-right-so-the-ti_1777602951112.txt
frontend/qp-maker/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
frontend/qp-maker/.replit-artifact/: artifact.toml
frontend/qp-maker/src/: App.tsx  index.css
frontend/qp-maker/src/components/: layout.tsx  paper-preview.tsx
frontend/qp-maker/src/lib/: ai-api.ts  mock-data.ts
frontend/qp-maker/src/pages/: generate.tsx  history.tsx  home.tsx  login.tsx  questions.tsx  review.tsx  settings.tsx
lib/api-client-react/: package.json  tsconfig.json
lib/api-client-react/src/: custom-fetch.ts  index.ts
lib/api-spec/: openapi.json  openapi.yaml  orval.config.ts  package.json
lib/api-zod/: package.json  tsconfig.json
lib/api-zod/src/: index.ts
lib/db/: drizzle.config.ts  package.json  tsconfig.json
lib/db/src/: index.ts
scripts/: package.json  post-merge.sh  tsconfig.json
scripts/src/: hello.ts
src/: App.tsx
(+7 files in other folders)
